src/objects/Daily_Stats__c.object
<CustomObject>
    <fields>
        <fullName>Absent_Sales_Reps__c</fullName>
        <label>Absent Sales Reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Admob_Products__c</fullName>
        <label>Active Admob Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Adwords_Products__c</fullName>
        <label>Active Adwords Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Clients__c</fullName>
        <label>Active Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Converto_Products__c</fullName>
        <label>Active Converto Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Facebook_Products__c</fullName>
        <label>Active Facebook Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Google_Products__c</fullName>
        <label>Active Google Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Products__c</fullName>
        <inlineHelpText>Only counts CM products, which includes Adwords, Facebook, Admob, Yahoo and Google+</inlineHelpText>
        <label>Active Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_SEO_Products__c</fullName>
        <label>Active SEO Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Sales_Reps__c</fullName>
        <label>Active Sales Reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Sales_Reps__c</fullName>
        <formula>Active_Sales_Reps__c - Absent_Sales_Reps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Sales Reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancels__c</fullName>
        <label>Cancels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GMT_Absent_Sales_Reps__c</fullName>
        <label>GMT Absent Sales Reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Active_Admob_Products__c</fullName>
        <label>GMT Active Admob Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Active_Adwords_Products__c</fullName>
        <label>GMT Active Adwords Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Active_Clients__c</fullName>
        <label>GMT Active Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Active_Converto_Products__c</fullName>
        <label>GMT Active Converto Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Active_Facebook_Products__c</fullName>
        <label>GMT Active Facebook Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Active_Google_Products__c</fullName>
        <label>GMT Active Google Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Active_Products__c</fullName>
        <label>GMT Active Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Active_SEO_Products__c</fullName>
        <label>GMT Active SEO Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Absent_Sales_Reps__c</fullName>
        <label>GMT NZ Absent Sales Reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Active_Admob_Products__c</fullName>
        <label>GMT NZ Active Admob Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Active_Adwords_Products__c</fullName>
        <label>GMT NZ Active Adwords Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Active_Clients__c</fullName>
        <label>GMT NZ Active Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Active_Converto_Products__c</fullName>
        <label>GMT NZ Active Converto Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Active_Facebook_Products__c</fullName>
        <label>GMT NZ Active Facebook Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Active_Google_Products__c</fullName>
        <label>GMT NZ  Active Google Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Active_Products__c</fullName>
        <label>GMT NZ Active Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Active_SEO_Products__c</fullName>
        <label>GMT NZ Active SEO Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Paused_Adwords_Products__c</fullName>
        <label>GMT NZ Paused Adwords Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Paused_Clients__c</fullName>
        <label>GMT NZ Paused Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Paused_Converto_Products__c</fullName>
        <label>GMT NZ Paused Converto Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Paused_Facebook_Products__c</fullName>
        <label>GMT NZ Paused Facebook Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Paused_Google_Products__c</fullName>
        <label>GMT NZ Paused Google Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Paused_Products__c</fullName>
        <label>GMT NZ Paused Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Paused_SEO_Products__c</fullName>
        <label>GMT NZ Paused SEO Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Setup_Adwords_Products__c</fullName>
        <label>GMT NZ Setup Adwords Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Setup_Clients__c</fullName>
        <label>GMT NZ Setup Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Setup_Converto_Products__c</fullName>
        <label>GMT NZ Setup Converto Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Setup_Facebook_Products__c</fullName>
        <label>GMT NZ Setup Facebook Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Setup_Google_Products__c</fullName>
        <label>GMT NZ Setup Google Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Setup_Products__c</fullName>
        <label>GMT NZ Setup Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_NZ_Setup_SEO_Products__c</fullName>
        <label>GMT NZ Setup SEO Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Paused_Adwords_Products__c</fullName>
        <label>GMT Paused Adwords Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Paused_Clients__c</fullName>
        <label>GMT Paused Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Paused_Converto_Products__c</fullName>
        <label>GMT Paused Converto Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Paused_Facebook_Products__c</fullName>
        <label>GMT Paused Facebook Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Paused_Google_Products__c</fullName>
        <label>GMT Paused Google Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Paused_Products__c</fullName>
        <label>GMT Paused Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Paused_SEO_Products__c</fullName>
        <label>GMT Paused SEO Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Setup_Adwords_Products__c</fullName>
        <label>GMT Setup Adwords Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Setup_Clients__c</fullName>
        <label>GMT Setup Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Setup_Converto_Products__c</fullName>
        <label>GMT Setup Converto Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Setup_Facebook_Products__c</fullName>
        <label>GMT Setup Facebook Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Setup_Google_Products__c</fullName>
        <label>GMT Setup Google Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Setup_Products__c</fullName>
        <label>GMT Setup Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Setup_SEO_Products__c</fullName>
        <label>GMT Setup SEO Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pauses__c</fullName>
        <label>Pauses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Absent_Sales_Reps__c</fullName>
        <label>SLX Absent Sales Reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Active_Admob_Products__c</fullName>
        <label>SLX Active Admob Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Active_Adwords_Products__c</fullName>
        <label>SLX Active Adwords Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Active_Clients__c</fullName>
        <label>SLX Active Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Active_Converto_Products__c</fullName>
        <label>SLX Active Converto Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Active_Facebook_Products__c</fullName>
        <label>SLX Active Facebook Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Active_Google_Products__c</fullName>
        <label>SLX Active Google Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Active_Products__c</fullName>
        <label>SLX Active Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Active_SEO_Products__c</fullName>
        <label>SLX Active SEO Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Absent_Sales_Reps__c</fullName>
        <label>SLX NZ Absent Sales Reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Active_Admob_Products__c</fullName>
        <label>SLX NZ Active Admob Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Active_Adwords_Products__c</fullName>
        <label>SLX NZ Active Adwords Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Active_Clients__c</fullName>
        <label>SLX NZ Active Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Active_Converto_Products__c</fullName>
        <label>SLX NZ Active Converto Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Active_Facebook_Products__c</fullName>
        <label>SLX NZ Active Facebook Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Active_Google_Products__c</fullName>
        <label>SLX NZ Active Google Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Active_Products__c</fullName>
        <label>SLX NZ Active Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Active_SEO_Products__c</fullName>
        <label>SLX NZ Active SEO Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Paused_Adwords_Products__c</fullName>
        <label>SLX NZ Paused Adwords Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Paused_Clients__c</fullName>
        <label>SLX NZ Paused Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Paused_Converto_Products__c</fullName>
        <label>SLX NZ Paused Converto Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Paused_Facebook_Products__c</fullName>
        <label>SLX NZ Paused Facebook Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Paused_Google_Products__c</fullName>
        <label>SLX NZ Paused Google Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Paused_Products__c</fullName>
        <label>SLX NZ Paused Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Paused_SEO_Products__c</fullName>
        <label>SLX NZ Paused SEO Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Setup_Adwords_Products__c</fullName>
        <label>SLX NZ Setup Adwords Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Setup_Clients__c</fullName>
        <label>SLX NZ Setup Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Setup_Converto_Products__c</fullName>
        <label>SLX NZ Setup Converto Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Setup_Facebook_Products__c</fullName>
        <label>SLX NZ Setup Facebook Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Setup_Google_Products__c</fullName>
        <label>SLX NZ Setup Google Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Setup_Products__c</fullName>
        <label>SLX NZ Setup Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_NZ_Setup_SEO_Products__c</fullName>
        <label>SLX NZ Setup SEO Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Paused_Adwords_Products__c</fullName>
        <label>SLX Paused Adwords Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Paused_Clients__c</fullName>
        <label>SLX Paused Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Paused_Converto_Products__c</fullName>
        <label>SLX Paused Converto Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Paused_Facebook_Products__c</fullName>
        <label>SLX Paused Facebook Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Paused_Google_Products__c</fullName>
        <label>SLX Paused Google Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Paused_Products__c</fullName>
        <label>SLX Paused Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Paused_SEO_Products__c</fullName>
        <label>SLX Paused SEO Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Setup_Adwords_Products__c</fullName>
        <label>SLX Setup Adwords Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Setup_Clients__c</fullName>
        <label>SLX Setup Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Setup_Converto_Products__c</fullName>
        <label>SLX Setup Converto Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Setup_Facebook_Products__c</fullName>
        <label>SLX Setup Facebook Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Setup_Google_Products__c</fullName>
        <label>SLX Setup Google Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Setup_Products__c</fullName>
        <label>SLX Setup Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Setup_SEO_Products__c</fullName>
        <label>SLX Setup SEO Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Reps__c</fullName>
        <label>Sales Reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Setups__c</fullName>
        <label>Setups</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Daily Stat</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Daily Stats Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Daily Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>